FISH-8652: Revert HttpClient changes.
HttpClient does not exist in JDK8. These class have been fully or partially reverted to avoid this issue.

There is a related issue involving incorrect shutdown behaviour; git logs imply the issue was resolved before HttpClient was implemented, but testing is needed.