@@ -16,6 +16,7 @@
 
 package com.hazelcast.kubernetes;
 
+import com.hazelcast.core.HazelcastException;
 import com.hazelcast.instance.impl.ClusterTopologyIntentTracker;
 import com.hazelcast.internal.json.Json;
 import com.hazelcast.internal.json.JsonArray;
@@ -24,6 +25,7 @@ import com.hazelcast.internal.json.JsonValue;
 import com.hazelcast.internal.util.HostnameUtil;
 import com.hazelcast.internal.util.StringUtil;
 import com.hazelcast.internal.util.concurrent.BackoffIdleStrategy;
+import com.hazelcast.internal.util.concurrent.ThreadFactoryImpl;
 import com.hazelcast.kubernetes.KubernetesConfig.ExposeExternallyMode;
 import com.hazelcast.logging.ILogger;
 import com.hazelcast.logging.Logger;
@@ -34,6 +36,7 @@ import com.hazelcast.spi.utils.RetryUtils;
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 import java.io.IOException;
+import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
@@ -43,6 +46,8 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
 
 import static com.hazelcast.instance.impl.ClusterTopologyIntentTracker.UNKNOWN;
 import static java.util.Arrays.asList;
@@ -50,6 +55,7 @@ import static java.util.Collections.emptyList;
 import static java.util.concurrent.TimeUnit.MILLISECONDS;
 import static java.util.concurrent.TimeUnit.SECONDS;
 
+// TODO JDK8: Class has been partially reverted to 5.3.8, due to missing HttpClient. Further inspection needed.
 /**
  * Responsible for connecting to the Kubernetes API.
  *
@@ -174,12 +180,12 @@ class KubernetesClient {
     }
 
     public void destroy() {
-        // It's important we shut down the StsMonitorThread first, as the ClusterTopologyIntentTracker
+        // It's important we interrupt the StsMonitorThread first, as the ClusterTopologyIntentTracker
         // receives messages from this thread, and we want to let it process all available messages
         // before the intent tracker is shutdown
         if (stsMonitorThread != null) {
-            LOGGER.info("Shutting down StatefulSet monitor thread");
-            stsMonitorThread.shutdown();
+            LOGGER.info("Interrupting StatefulSet monitor thread");
+            stsMonitorThread.interrupt();
         }
 
         if (clusterTopologyIntentTracker != null) {
@@ -243,6 +249,16 @@ class KubernetesClient {
         } catch (RestClientException e) {
             return handleKnownException(e);
         }
+    }
+
+    private static String getLabelSelectorParameter(String labelNames, String labelValues) {
+        List<String> labelNameList = new ArrayList<>(Arrays.asList(labelNames.split(",")));
+        List<String> labelValueList = new ArrayList<>(Arrays.asList(labelValues.split(",")));
+        List<String> selectorList = new ArrayList<>(labelNameList.size());
+        for (int i = 0; i < labelNameList.size(); i++) {
+            selectorList.add(i, String.format("%s=%s", labelNameList.get(i), labelValueList.get(i)));
+        }
+        return String.format("labelSelector=%s", String.join(",", selectorList));
     }
 
     /**
@@ -340,180 +356,6 @@ class KubernetesClient {
         return new RuntimeContext(specReplicas, readyReplicas, replicas, resourceVersion);
     }
 
-    @Nullable
-    private String extractNodeName(EndpointAddress endpointAddress, Map<EndpointAddress, String> nodes) {
-        String nodeName = nodes.get(endpointAddress);
-        if (nodeName == null) {
-            JsonObject podJson = callGet(String.format("%s/api/v1/namespaces/%s/pods/%s",
-                    kubernetesMaster, namespace, endpointAddress.getTargetRefName()));
-            return podJson.get("spec").asObject().get("nodeName").asString();
-        }
-        return nodeName;
-    }
-
-    /**
-     * Tries to add public addresses to the endpoints.
-     * <p>
-     * If it's not possible, then returns the input parameter.
-     * <p>
-     * Assigning public IPs must meet one of the following requirements:
-     * <ul>
-     * <li>Each POD must be exposed with a separate LoadBalancer service OR</li>
-     * <li>Each POD must be exposed with a separate NodePort service and Kubernetes nodes must have external IPs</li>
-     * </ul>
-     * <p>
-     * The algorithm to fetch public IPs is as follows:
-     * <ol>
-     * <li>Use Kubernetes API (/endpoints) to find dedicated services for each POD</li>
-     * <li>For each POD:
-     * <ul>
-     * <li>If the corresponding service type is LoadBalancer, It extracts the External IP and Service Port</li>
-     * <li>If the service type is NodePort, It uses the Kubernetes API (/nodes) to find the External IP of the Node</li>
-     * </ul>
-     * </li>
-     * </ol>
-     */
-    private List<Endpoint> enrichWithPublicAddresses(List<Endpoint> endpoints) {
-        if (exposeExternallyMode == ExposeExternallyMode.DISABLED) {
-            return endpoints;
-        }
-        try {
-            String endpointsUrl = String.format(apiProvider.getEndpointsUrlString(), kubernetesMaster, namespace);
-            if (!StringUtil.isNullOrEmptyAfterTrim(servicePerPodLabelName)
-                    && !StringUtil.isNullOrEmptyAfterTrim(servicePerPodLabelValue)) {
-                endpointsUrl += String.format("?labelSelector=%s=%s", servicePerPodLabelName, servicePerPodLabelValue);
-            }
-            JsonObject endpointsJson = callGet(endpointsUrl);
-
-            List<String> privateAddresses = privateAddresses(endpoints);
-            Map<EndpointAddress, String> services = apiProvider.extractServices(endpointsJson, privateAddresses);
-            Map<EndpointAddress, String> nodeAddresses = apiProvider.extractNodes(endpointsJson, privateAddresses);
-
-            Map<String, Address> publicServiceAddresses = new HashMap<>();
-            Map<String, String> cachedNodePublicIps = new HashMap<>();
-
-            for (Map.Entry<EndpointAddress, String> serviceEntry : services.entrySet()) {
-                EndpointAddress privateAddress = serviceEntry.getKey();
-                String service = serviceEntry.getValue();
-                String serviceUrl = String.format("%s/api/v1/namespaces/%s/services/%s", kubernetesMaster, namespace, service);
-                JsonObject serviceJson = callGet(serviceUrl);
-                String serviceType = extractServiceType(serviceJson);
-
-                if (SERVICE_TYPE_LOADBALANCER.equals(serviceType)) {
-                    Address loadBalancerServiceAddress = extractLoadBalancerServiceAddress(serviceJson);
-                    publicServiceAddresses.put(privateAddress.getIp(), loadBalancerServiceAddress);
-                } else if (SERVICE_TYPE_NODEPORT.equals(serviceType)) {
-                    Address nodePortServiceAddress = extractNodePortServiceAddress(serviceJson, serviceEntry.getKey(),
-                            nodeAddresses, cachedNodePublicIps);
-                    publicServiceAddresses.put(privateAddress.getIp(), nodePortServiceAddress);
-                    // Log warning only once.
-                    if (!isNodePortWarningAlreadyLogged && exposeExternallyMode == ExposeExternallyMode.ENABLED) {
-                        LOGGER.warning("Using NodePort service type for public addresses may lead to connection issues from "
-                                + "outside of the Kubernetes cluster. Ensure external accessibility of the NodePort IPs.");
-                        isNodePortWarningAlreadyLogged = true;
-                    }
-                } else {
-                    throw new IllegalStateException(String.format(
-                            "Service type '%s' is not supported to discover the public addresses of the members", serviceType));
-                }
-            }
-
-            return createEndpoints(endpoints, publicServiceAddresses);
-        } catch (Exception e) {
-            if (exposeExternallyMode == ExposeExternallyMode.ENABLED) {
-                throw e;
-            }
-            // If expose-externally not set (exposeExternallyMode == ExposeExternallyMode.AUTO), silently ignore any exception
-            LOGGER.finest(e);
-            // Log warning only once.
-            if (!isNoPublicIpAlreadyLogged) {
-                LOGGER.warning("Cannot fetch public IPs of Hazelcast Member PODs, you won't be able to use "
-                        + "Hazelcast Smart Client from outside of the Kubernetes network");
-                isNoPublicIpAlreadyLogged = true;
-            }
-            return endpoints;
-        }
-    }
-
-    private String externalIpAddressForNode(String node) {
-        String nodeExternalAddress;
-        if (useNodeNameAsExternalAddress) {
-            LOGGER.info("Using node name instead of public IP for node, must be available from client: " + node);
-            nodeExternalAddress = node;
-        } else {
-            String nodeUrl = String.format("%s/api/v1/nodes/%s", kubernetesMaster, node);
-            nodeExternalAddress = extractNodePublicIp(callGet(nodeUrl));
-        }
-        return nodeExternalAddress;
-    }
-
-    private Address extractNodePortServiceAddress(JsonObject serviceJson, EndpointAddress endpointAddress,
-                                                  Map<EndpointAddress, String> nodeAddresses,
-                                                  Map<String, String> cachedNodePublicIps) {
-        Integer nodePort = extractNodePort(serviceJson);
-        String node = extractNodeName(endpointAddress, nodeAddresses);
-        String nodePublicIpAddress;
-        if (cachedNodePublicIps.containsKey(node)) {
-            nodePublicIpAddress = cachedNodePublicIps.get(node);
-        } else {
-            nodePublicIpAddress = externalIpAddressForNode(node);
-            cachedNodePublicIps.put(node, nodePublicIpAddress);
-        }
-        return new Address(nodePublicIpAddress, nodePort);
-    }
-
-    /**
-     * Makes a REST call to Kubernetes API and returns the result JSON.
-     *
-     * @param urlString Kubernetes API REST endpoint
-     * @return parsed JSON
-     * @throws KubernetesClientException if Kubernetes API didn't respond with 200 and a valid JSON content
-     */
-    private JsonObject callGet(final String urlString) {
-        return RetryUtils.retry(() -> Json
-                .parse((caCertificate == null ? RestClient.create(urlString, CONNECTION_TIMEOUT_SECONDS)
-                        : RestClient.createWithSSL(urlString, caCertificate, CONNECTION_TIMEOUT_SECONDS))
-                        .withHeader("Authorization", String.format("Bearer %s", tokenProvider.getToken()))
-                        .withRequestTimeoutSeconds(READ_TIMEOUT_SECONDS)
-                        .get()
-                        .getBody())
-                .asObject(), retries, NON_RETRYABLE_KEYWORDS);
-    }
-
-    private List<Endpoint> handleKnownException(RestClientException e) {
-        if (e.getHttpErrorCode() == HTTP_UNAUTHORIZED) {
-            if (!isKnownExceptionAlreadyLogged) {
-                LOGGER.warning("Kubernetes API authorization failure! To use Hazelcast Kubernetes discovery, "
-                        + "please check your 'api-token' property. Starting standalone.");
-                isKnownExceptionAlreadyLogged = true;
-            }
-        } else if (e.getHttpErrorCode() == HTTP_FORBIDDEN) {
-            if (!isKnownExceptionAlreadyLogged) {
-                LOGGER.warning("Kubernetes API access is forbidden! Starting standalone. To use Hazelcast Kubernetes discovery, "
-                        + "configure the required RBAC. For 'default' service account in 'default' namespace execute "
-                        + "`kubectl apply -f https://raw.githubusercontent.com/hazelcast/hazelcast/master/kubernetes-rbac.yaml` "
-                        + "If you want to use a different service account and a different namespace, "
-                        + "you can update the mentioned rbac.yaml file accordingly and use it. "
-                        + "Error Kubernetes API Cause details:", e);
-                isKnownExceptionAlreadyLogged = true;
-            }
-        } else {
-            throw e;
-        }
-        LOGGER.finest(e);
-        return emptyList();
-    }
-
-    private static String getLabelSelectorParameter(String labelNames, String labelValues) {
-        List<String> labelNameList = new ArrayList<>(Arrays.asList(labelNames.split(",")));
-        List<String> labelValueList = new ArrayList<>(Arrays.asList(labelValues.split(",")));
-        List<String> selectorList = new ArrayList<>(labelNameList.size());
-        for (int i = 0; i < labelNameList.size(); i++) {
-            selectorList.add(i, String.format("%s=%s", labelNameList.get(i), labelValueList.get(i)));
-        }
-        return String.format("labelSelector=%s", String.join(",", selectorList));
-    }
-
     private static List<Endpoint> parsePodsList(JsonObject podsListJson) {
         List<Endpoint> addresses = new ArrayList<>();
 
@@ -569,14 +411,13 @@ class KubernetesClient {
     }
 
     private static String extractNodeName(JsonObject podJson) {
-        return toString(podJson.get("spec")
-                .asObject().get("nodeName"));
+        return toString(podJson.get("spec").asObject().get("nodeName"));
     }
 
     private static String extractZone(JsonObject nodeJson) {
         JsonObject labels = nodeJson.get("metadata").asObject().get("labels").asObject();
         List<String> zoneLabels = asList("topology.kubernetes.io/zone", "failure-domain.kubernetes.io/zone",
-                "failure-domain.beta.kubernetes.io/zone");
+            "failure-domain.beta.kubernetes.io/zone");
         for (String zoneLabel : zoneLabels) {
             JsonValue zone = labels.get(zoneLabel);
             if (zone != null) {
@@ -586,15 +427,106 @@ class KubernetesClient {
         return null;
     }
 
-    private static String extractServiceType(JsonObject serviceResponse) {
-        return serviceResponse.get("spec").asObject()
-                .get("type").asString();
+    /**
+     * Tries to add public addresses to the endpoints.
+     * <p>
+     * If it's not possible, then returns the input parameter.
+     * <p>
+     * Assigning public IPs must meet one of the following requirements:
+     * <ul>
+     * <li>Each POD must be exposed with a separate LoadBalancer service OR</li>
+     * <li>Each POD must be exposed with a separate NodePort service and Kubernetes nodes must have external IPs</li>
+     * </ul>
+     * <p>
+     * The algorithm to fetch public IPs is as follows:
+     * <ol>
+     * <li>Use Kubernetes API (/endpoints) to find dedicated services for each POD</li>
+     * <li>For each POD:
+     * <ol>
+     * <li>Use Kubernetes API (/services) to find the LoadBalancer External IP and Service Port</li>
+     * <li>If not found, then use Kubernetes API (/nodes) to find External IP of the Node</li>
+     * </ol>
+     * </li>
+     * </ol>
+     */
+    private List<Endpoint> enrichWithPublicAddresses(List<Endpoint> endpoints) {
+        if (exposeExternallyMode == ExposeExternallyMode.DISABLED) {
+            return endpoints;
+        }
+        try {
+            String endpointsUrl = String.format(apiProvider.getEndpointsUrlString(), kubernetesMaster, namespace);
+            if (!StringUtil.isNullOrEmptyAfterTrim(servicePerPodLabelName)
+                    && !StringUtil.isNullOrEmptyAfterTrim(servicePerPodLabelValue)) {
+                endpointsUrl += String.format("?labelSelector=%s=%s", servicePerPodLabelName, servicePerPodLabelValue);
+            }
+            JsonObject endpointsJson = callGet(endpointsUrl);
+
+            List<String> privateAddresses = privateAddresses(endpoints);
+            Map<EndpointAddress, String> services = apiProvider.extractServices(endpointsJson, privateAddresses);
+            Map<EndpointAddress, String> nodeAddresses = apiProvider.extractNodes(endpointsJson, privateAddresses);
+
+            Map<String, String> publicIps = new HashMap<>();
+            Map<String, Integer> publicPorts = new HashMap<>();
+            Map<String, String> cachedNodePublicIps = new HashMap<>();
+
+            for (Map.Entry<EndpointAddress, String> serviceEntry : services.entrySet()) {
+                EndpointAddress privateAddress = serviceEntry.getKey();
+                String service = serviceEntry.getValue();
+                String serviceUrl = String.format("%s/api/v1/namespaces/%s/services/%s", kubernetesMaster, namespace, service);
+                JsonObject serviceJson = callGet(serviceUrl);
+                try {
+                    String loadBalancerAddress = extractLoadBalancerAddress(serviceJson);
+                    Integer servicePort = extractServicePort(serviceJson);
+                    publicIps.put(privateAddress.getIp(), loadBalancerAddress);
+                    publicPorts.put(privateAddress.getIp(), servicePort);
+                } catch (Exception e) {
+                    // Load Balancer public IP cannot be found, try using NodePort.
+                    Integer nodePort = extractNodePort(serviceJson);
+                    String node = extractNodeName(serviceEntry.getKey(), nodeAddresses);
+                    String nodePublicAddress;
+                    if (cachedNodePublicIps.containsKey(node)) {
+                        nodePublicAddress = cachedNodePublicIps.get(node);
+                    } else {
+                        nodePublicAddress = externalAddressForNode(node);
+                        cachedNodePublicIps.put(node, nodePublicAddress);
+                    }
+                    publicIps.put(privateAddress.getIp(), nodePublicAddress);
+                    publicPorts.put(privateAddress.getIp(), nodePort);
+                    // Log warning only once.
+                    if (!isNodePortWarningAlreadyLogged && exposeExternallyMode == ExposeExternallyMode.ENABLED) {
+                        LOGGER.warning("Using NodePort service type for public addresses may lead to connection issues from "
+                                + "outside of the Kubernetes cluster. Ensure external accessibility of the NodePort IPs.");
+                        isNodePortWarningAlreadyLogged = true;
+                    }
+                }
+            }
+
+            return createEndpoints(endpoints, publicIps, publicPorts);
+        } catch (Exception e) {
+            if (exposeExternallyMode == ExposeExternallyMode.ENABLED) {
+                throw e;
+            }
+            // If expose-externally not set (exposeExternallyMode == ExposeExternallyMode.AUTO), silently ignore any exception
+            LOGGER.finest(e);
+            // Log warning only once.
+            if (!isNoPublicIpAlreadyLogged) {
+                LOGGER.warning("Cannot fetch public IPs of Hazelcast Member PODs, you won't be able to use "
+                        + "Hazelcast Smart Client from outside of the Kubernetes network");
+                isNoPublicIpAlreadyLogged = true;
+            }
+            return endpoints;
+        }
     }
 
-    private static Address extractLoadBalancerServiceAddress(JsonObject serviceJson) {
-        String loadBalancerIpAddress = extractLoadBalancerIpAddress(serviceJson);
-        Integer servicePort = extractServicePort(serviceJson);
-        return new Address(loadBalancerIpAddress, servicePort);
+    @Nullable
+    private String extractNodeName(EndpointAddress endpointAddress, Map<EndpointAddress, String> nodes) {
+        String nodeName = nodes.get(endpointAddress);
+        if (nodeName == null) {
+            JsonObject podJson = callGet(String.format("%s/api/v1/namespaces/%s/pods/%s",
+                kubernetesMaster, namespace, endpointAddress.getTargetRefName()));
+            return podJson.get("spec").asObject().get("nodeName").asString();
+        }
+        return nodeName;
     }
 
     private static List<String> privateAddresses(List<Endpoint> endpoints) {
@@ -605,32 +537,16 @@ class KubernetesClient {
         return result;
     }
 
-    private static String extractLoadBalancerIpAddress(JsonObject serviceResponse) {
-        try {
-            JsonObject ingress = serviceResponse
-                    .get("status").asObject()
-                    .get("loadBalancer").asObject()
-                    .get("ingress").asArray().get(0).asObject();
-            JsonValue address = ingress.get("ip");
-            if (address == null) {
-                address = ingress.get("hostname");
-            }
-            return address.asString();
-        } catch (Exception e) {
-            throw new KubernetesClientException("Unable to extract the public address from the LoadBalancer service", e);
+    private static String extractLoadBalancerAddress(JsonObject serviceResponse) {
+        JsonObject ingress = serviceResponse
+            .get("status").asObject()
+            .get("loadBalancer").asObject()
+            .get("ingress").asArray().get(0).asObject();
+        JsonValue address = ingress.get("ip");
+        if (address == null) {
+            address = ingress.get("hostname");
         }
-    }
-
-    private static List<Endpoint> createEndpoints(List<Endpoint> endpoints, Map<String, Address> publicAddresses) {
-        List<Endpoint> result = new ArrayList<>();
-        for (Endpoint endpoint : endpoints) {
-            EndpointAddress privateAddress = endpoint.getPrivateAddress();
-            Address serviceAddress = publicAddresses.get(privateAddress.getIp());
-            EndpointAddress publicAddress = new EndpointAddress(serviceAddress.ip, serviceAddress.port,
-                    privateAddress.getTargetRefName());
-            result.add(new Endpoint(privateAddress, publicAddress, endpoint.isReady(), endpoint.getAdditionalProperties()));
-        }
-        return result;
+        return address.asString();
     }
 
     private static Integer extractServicePort(JsonObject serviceJson) {
@@ -653,6 +569,18 @@ class KubernetesClient {
         return ports.get(0).asObject().get("nodePort").asInt();
     }
 
+    private String externalAddressForNode(String node) {
+        String nodeExternalAddress;
+        if (useNodeNameAsExternalAddress) {
+            LOGGER.info("Using node name instead of public IP for node, must be available from client: " + node);
+            nodeExternalAddress = node;
+        } else {
+            String nodeUrl = String.format("%s/api/v1/nodes/%s", kubernetesMaster, node);
+            nodeExternalAddress = extractNodePublicIp(callGet(nodeUrl));
+        }
+        return nodeExternalAddress;
+    }
+
     private static String extractNodePublicIp(JsonObject nodeJson) {
         for (JsonValue address : toJsonArray(nodeJson.get("status").asObject().get("addresses"))) {
             if ("ExternalIP".equals(address.asObject().get("type").asString())) {
@@ -661,6 +589,58 @@ class KubernetesClient {
         }
         throw new KubernetesClientException(String.format("Cannot expose externally, node %s does not have ExternalIP"
                 + " assigned", nodeJson.get("metadata").asObject().get("name")));
+    }
+
+    private static List<Endpoint> createEndpoints(List<Endpoint> endpoints, Map<String, String> publicIps,
+                                                  Map<String, Integer> publicPorts) {
+        List<Endpoint> result = new ArrayList<>();
+        for (Endpoint endpoint : endpoints) {
+            EndpointAddress privateAddress = endpoint.getPrivateAddress();
+            EndpointAddress publicAddress = new EndpointAddress(publicIps.get(privateAddress.getIp()),
+                publicPorts.get(privateAddress.getIp()), privateAddress.getTargetRefName());
+            result.add(new Endpoint(privateAddress, publicAddress, endpoint.isReady(), endpoint.getAdditionalProperties()));
+        }
+        return result;
+    }
+
+    /**
+     * Makes a REST call to Kubernetes API and returns the result JSON.
+     *
+     * @param urlString Kubernetes API REST endpoint
+     * @return parsed JSON
+     * @throws KubernetesClientException if Kubernetes API didn't respond with 200 and a valid JSON content
+     */
+    private JsonObject callGet(final String urlString) {
+        return RetryUtils.retry(() -> Json
+            .parse(RestClient.create(urlString)
+                .withHeader("Authorization", String.format("Bearer %s", tokenProvider.getToken()))
+                .withCaCertificates(caCertificate)
+                .withConnectTimeoutSeconds(CONNECTION_TIMEOUT_SECONDS)
+                .withReadTimeoutSeconds(READ_TIMEOUT_SECONDS)
+                .get()
+                .getBody())
+            .asObject(), retries, NON_RETRYABLE_KEYWORDS);
+    }
+
+    private List<Endpoint> handleKnownException(RestClientException e) {
+        if (e.getHttpErrorCode() == HTTP_UNAUTHORIZED) {
+            if (!isKnownExceptionAlreadyLogged) {
+                LOGGER.warning("Kubernetes API authorization failure! To use Hazelcast Kubernetes discovery, "
+                    + "please check your 'api-token' property. Starting standalone.");
+                isKnownExceptionAlreadyLogged = true;
+            }
+        } else if (e.getHttpErrorCode() == HTTP_FORBIDDEN) {
+            if (!isKnownExceptionAlreadyLogged) {
+                LOGGER.warning("Kubernetes API access is forbidden! Starting standalone. To use Hazelcast Kubernetes discovery,"
+                    + " configure the required RBAC. For 'default' service account in 'default' namespace execute: "
+                    + "`kubectl apply -f https://raw.githubusercontent.com/hazelcast/hazelcast/master/kubernetes-rbac.yaml`");
+                isKnownExceptionAlreadyLogged = true;
+            }
+        } else {
+            throw e;
+        }
+        LOGGER.finest(e);
+        return emptyList();
     }
 
     private static JsonArray toJsonArray(JsonValue jsonValue) {
@@ -730,29 +710,28 @@ class KubernetesClient {
     }
 
     static final class EndpointAddress {
-        private final Address address;
+        private final String ip;
+        private final Integer port;
 
         private String targetRefName;
 
-        EndpointAddress(Address address) {
-            this.address = address;
-        }
-
         EndpointAddress(String ip, Integer port) {
-            this(new Address(ip, port));
+            this.ip = ip;
+            this.port = port;
         }
 
         EndpointAddress(String ip, Integer port, String targetRefName) {
-            this(ip, port);
+            this.ip = ip;
+            this.port = port;
             this.targetRefName = targetRefName;
         }
 
         String getIp() {
-            return address.ip;
+            return ip;
         }
 
         Integer getPort() {
-            return address.port;
+            return port;
         }
 
         String getTargetRefName() {
@@ -768,42 +747,12 @@ class KubernetesClient {
                 return false;
             }
 
-            EndpointAddress endpointAddress = (EndpointAddress) o;
-            return Objects.equals(address, endpointAddress.address)
-                    && Objects.equals(targetRefName, endpointAddress.targetRefName);
-        }
+            EndpointAddress address = (EndpointAddress) o;
 
-        @Override
-        public int hashCode() {
-            return Objects.hash(address, targetRefName);
-        }
-
-        @Override
-        public String toString() {
-            return address.toString();
-        }
-    }
-
-    static final class Address {
-        private final String ip;
-        private final Integer port;
-
-        Address(String ip, Integer port) {
-            this.ip = ip;
-            this.port = port;
-        }
-
-        @Override
-        public boolean equals(Object o) {
-            if (this == o) {
-                return true;
-            }
-            if (o == null || getClass() != o.getClass()) {
+            if (!Objects.equals(ip, address.ip) || !Objects.equals(targetRefName, address.targetRefName)) {
                 return false;
             }
-
-            Address address = (Address) o;
-            return Objects.equals(ip, address.ip) && Objects.equals(port, address.port);
+            return Objects.equals(port, address.port);
         }
 
         @Override
@@ -838,11 +787,19 @@ class KubernetesClient {
         private final String stsUrlString;
         private final BackoffIdleStrategy backoffIdleStrategy;
 
+        // We offload reading to a separate Thread to allow us to interrupt the reading operation
+        // when this Thread needs to be shutdown, avoiding the need to terminate this thread in a
+        // non-graceful manner, which could lead to uncompleted message handling - without using a
+        // separate thread, BufferedReader#readLine() blocks until data is received and does not
+        // handle Thread#interrupt()
+        private final ExecutorService readExecutor;
+
         StsMonitorThread() {
             super("hz-k8s-sts-monitor");
             stsUrlString = formatStsListUrl();
             backoffIdleStrategy = new BackoffIdleStrategy(MAX_SPINS, MAX_YIELDS,
-                    MILLISECONDS.toNanos(MIN_PARK_PERIOD_MILLIS), SECONDS.toNanos(MAX_PARK_PERIOD_SECONDS));
+                MILLISECONDS.toNanos(MIN_PARK_PERIOD_MILLIS), SECONDS.toNanos(MAX_PARK_PERIOD_SECONDS));
+            readExecutor = Executors.newSingleThreadExecutor(new ThreadFactoryImpl("hz-k8s-sts-monitor-reader"));
         }
 
         /**
@@ -858,7 +815,7 @@ class KubernetesClient {
             String message;
 
             while (running) {
-                if (shuttingDown) {
+                if (Thread.interrupted()) {
                     break;
                 }
                 try {
@@ -869,10 +826,6 @@ class KubernetesClient {
                     updateTracker(previous, latestRuntimeContext);
                     watchResponse = sendWatchRequest();
                 } catch (RestClientException e) {
-                    // interrupts during shutdown will trigger a RestClientException
-                    if (shuttingDown) {
-                        break;
-                    }
                     handleFailure(e);
                     // always retry after a RestClientException
                     continue;
@@ -884,34 +837,14 @@ class KubernetesClient {
                         onMessage(message);
                     }
                 } catch (IOException e) {
-                    // If we're shutting down, the watchResponse is already disconnected, and
-                    // the IOException can be disregarded; otherwise continue with logging
-                    if (!shuttingDown) {
-                        LOGGER.info("Exception while watching for StatefulSet changes", e);
-
-                        try {
-                            watchResponse.disconnect();
-                        } catch (Exception t) {
-                            LOGGER.fine("Exception while closing connection after an IOException", t);
-                        }
+                    LOGGER.info("Exception while watching for StatefulSet changes", e);
+                    try {
+                        watchResponse.disconnect();
+                    } catch (Exception t) {
+                        LOGGER.fine("Exception while closing connection after an IOException", t);
                     }
                 }
             }
-            finished = true;
-        }
-
-        public void shutdown() {
-            this.shuttingDown = true;
-            try {
-                if (watchResponse != null) {
-                    watchResponse.disconnect();
-                }
-            } catch (IOException e) {
-                LOGGER.fine("Exception while closing connection during shutdown", e);
-            }
-            // Interrupt thread as we may be in the process of making watch requests
-            //  or other calls that need to be interrupted for us to shut down promptly
-            stsMonitorThread.interrupt();
         }
 
         private void handleFailure(RestClientException e) {
@@ -932,7 +865,11 @@ class KubernetesClient {
 
         String formatStsListUrl() {
             String fieldSelectorValue = String.format("metadata.name=%s", stsName);
-            fieldSelectorValue = URLEncoder.encode(fieldSelectorValue, StandardCharsets.UTF_8);
+            try {
+                fieldSelectorValue = URLEncoder.encode(fieldSelectorValue, StandardCharsets.UTF_8.name());
+            } catch (UnsupportedEncodingException e) {
+                throw new HazelcastException(e);
+            }
             return String.format("%s/apis/apps/v1/namespaces/%s/statefulsets?fieldSelector=%s", kubernetesMaster,
                     namespace, fieldSelectorValue);
         }
@@ -951,11 +888,11 @@ class KubernetesClient {
          *          from Kubernetes API server.
          */
         @Nonnull
-        RestClient.WatchResponse sendWatchRequest() throws RestClientException {
-            RestClient restClient = (caCertificate == null ? RestClient.create(stsUrlString)
-                    : RestClient.createWithSSL(stsUrlString, caCertificate))
-                    .withHeader("Authorization", String.format("Bearer %s", tokenProvider.getToken()));
-            return restClient.watch(latestResourceVersion);
+        RestClient.WatchResponse sendWatchRequest() {
+            RestClient restClient = RestClient.create(stsUrlString)
+                .withHeader("Authorization", String.format("Bearer %s", tokenProvider.getToken()))
+                .withCaCertificates(caCertificate);
+            return restClient.watch(latestResourceVersion, readExecutor);
         }
 
         @Nullable
