@@ -20,23 +20,23 @@ import com.hazelcast.internal.nio.IOUtil;
 import com.hazelcast.spi.exception.RestClientException;
 
 import javax.annotation.Nullable;
+import javax.net.ssl.HttpsURLConnection;
 import javax.net.ssl.SSLContext;
+import javax.net.ssl.SSLSocketFactory;
 import javax.net.ssl.TrustManagerFactory;
 import java.io.BufferedReader;
 import java.io.ByteArrayInputStream;
+import java.io.DataOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.net.URI;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
+import java.net.HttpURLConnection;
+import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.security.KeyStore;
 import java.security.cert.Certificate;
 import java.security.cert.CertificateException;
 import java.security.cert.CertificateFactory;
-import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -45,7 +45,15 @@ import java.util.List;
 import java.util.Map;
 import java.util.Scanner;
 import java.util.Set;
+import java.util.concurrent.CancellationException;
+import java.util.concurrent.ExecutionException;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Future;
+import java.util.concurrent.TimeUnit;
 
+import static com.hazelcast.internal.util.ExceptionUtil.sneakyThrow;
+
+// TODO JDK8: Class has been partially reverted to 5.3.8, 5.4.0 relies on HttpClient, further inspection required.
 public final class RestClient {
 
     /**
@@ -66,17 +74,14 @@ public final class RestClient {
 
     private final String url;
     private final List<Parameter> headers = new ArrayList<>();
-    private final HttpClient httpClient;
     private Set<Integer> expectedResponseCodes;
     private String body;
-    private int requestTimeoutSeconds;
+    private int readTimeoutSeconds;
+    private int connectTimeoutSeconds;
     private int retries;
+    private String caCertificate;
 
     /**
-     * Build a new RestClient, backed by an {@link HttpClient} using {@link SSLContext}
-     * if a {@code non-null} caCertificate is provided. Initial connection attempt will
-     * be made with the provided connection timeout if greater than zero.
-     *
      * @param url                   the URL to connect to
      * @param caCertificate         the SSL certificate to use, or null
      * @param connectTimeoutSeconds the timeout used during initial connection attempt, or
@@ -84,14 +89,8 @@ public final class RestClient {
      */
     private RestClient(String url, @Nullable String caCertificate, int connectTimeoutSeconds) {
         this.url = url;
-        HttpClient.Builder builder = HttpClient.newBuilder().version(HttpClient.Version.HTTP_1_1);
-        if (connectTimeoutSeconds > 0) {
-            builder.connectTimeout(Duration.ofSeconds(connectTimeoutSeconds));
-        }
-        if (caCertificate != null) {
-            builder.sslContext(buildSslContext(caCertificate));
-        }
-        this.httpClient = builder.build();
+        this.caCertificate = caCertificate;
+        this.connectTimeoutSeconds = connectTimeoutSeconds;
     }
 
     public static RestClient create(String url) {
@@ -118,12 +117,6 @@ public final class RestClient {
     }
 
     public RestClient withHeader(String name, String value) {
-        // The `host` header cannot be set explicitly in Java 11, but it is still used
-        //  as part of request preparation (AWS signing, etc.), so the most thorough
-        //  solution is to clean it before request sending
-        if (name.equalsIgnoreCase("host")) {
-            return this;
-        }
         this.headers.add(new Parameter(name, value));
         return this;
     }
@@ -133,13 +126,34 @@ public final class RestClient {
         return this;
     }
 
+    /**
+     * <p> RestClient.requestTimeoutSeconds does not exist for Java 8. </p>
+     * <p> Use {@code withReadTimeoutSeconds} with {@code withConnectTimeoutSeconds} instead. </p>
+     */
+    @Deprecated()
     public RestClient withRequestTimeoutSeconds(int timeoutSeconds) {
-        this.requestTimeoutSeconds = timeoutSeconds;
+        this.readTimeoutSeconds = timeoutSeconds;
+        this.connectTimeoutSeconds = timeoutSeconds;
+        return this;
+    }
+
+    public RestClient withReadTimeoutSeconds(int readTimeoutSeconds) {
+        this.readTimeoutSeconds = readTimeoutSeconds;
+        return this;
+    }
+
+    public RestClient withConnectTimeoutSeconds(int connectTimeoutSeconds) {
+        this.connectTimeoutSeconds = connectTimeoutSeconds;
         return this;
     }
 
     public RestClient withRetries(int retries) {
         this.retries = retries;
+        return this;
+    }
+
+    public RestClient withCaCertificates(String caCertificate) {
+        this.caCertificate = caCertificate;
         return this;
     }
 
@@ -152,50 +166,56 @@ public final class RestClient {
     }
 
     public Response get() {
-        return callWithRetries(buildHttpRequest("GET"));
+        return callWithRetries("GET");
     }
 
     public Response post() {
-        return callWithRetries(buildHttpRequest("POST"));
+        return callWithRetries("POST");
     }
 
     public Response put() {
-        return callWithRetries(buildHttpRequest("PUT"));
+        return callWithRetries("PUT");
     }
 
-    private HttpRequest buildHttpRequest(String method) {
-        HttpRequest.Builder builder = HttpRequest.newBuilder()
-                .uri(URI.create(url));
-
-        if (requestTimeoutSeconds > 0) {
-            builder.timeout(Duration.ofSeconds(requestTimeoutSeconds));
-        }
-        headers.forEach(parameter -> builder.header(parameter.getKey(), parameter.getValue()));
-
-        HttpRequest.BodyPublisher publisher = body == null ? HttpRequest.BodyPublishers.noBody()
-                : HttpRequest.BodyPublishers.ofString(body);
-
-        // To emulate HttpURLConnection behaviour, which sets the method to "POST"
-        // if a body is provided, even after the requested method was set to "GET"
-        String finalMethod = body != null && "GET".equals(method) ? "POST" : method;
-
-        return builder.method(finalMethod, publisher)
-                .build();
+    private Response callWithRetries(String method) {
+        return RetryUtils.retry(() -> call(method), retries);
     }
 
-    private Response callWithRetries(HttpRequest request) {
-        return RetryUtils.retry(() -> call(request), retries);
-    }
-
-    private Response call(HttpRequest request) {
+    private Response call(String method) {
+        HttpURLConnection connection = null;
         try {
-            HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
-            checkResponseCode(request.method(), response);
-            return new Response(response.statusCode(), response.body());
+            URL urlToConnect = new URL(url);
+            connection = (HttpURLConnection) urlToConnect.openConnection();
+            if (connection instanceof HttpsURLConnection && caCertificate != null) {
+                ((HttpsURLConnection) connection).setSSLSocketFactory(buildSslSocketFactory());
+            }
+            connection.setReadTimeout((int) TimeUnit.SECONDS.toMillis(readTimeoutSeconds));
+            connection.setConnectTimeout((int) TimeUnit.SECONDS.toMillis(connectTimeoutSeconds));
+            connection.setRequestMethod(method);
+            for (Parameter header : headers) {
+                connection.setRequestProperty(header.getKey(), header.getValue());
+            }
+            if (body != null) {
+                byte[] bodyData = body.getBytes(StandardCharsets.UTF_8);
+
+                connection.setDoOutput(true);
+                connection.setRequestProperty("charset", "utf-8");
+                connection.setRequestProperty("Content-Length", Integer.toString(bodyData.length));
+
+                try (DataOutputStream outputStream = new DataOutputStream(connection.getOutputStream())) {
+                    outputStream.write(bodyData);
+                    outputStream.flush();
+                }
+            }
+
+            checkResponseCode(method, connection);
+            return new Response(connection.getResponseCode(), read(connection));
         } catch (IOException e) {
             throw new RestClientException("Failure in executing REST call", e);
-        } catch (InterruptedException e) {
-            throw new RestClientException("REST call interrupted", e);
+        } finally {
+            if (connection != null) {
+                connection.disconnect();
+            }
         }
     }
 
@@ -205,57 +225,57 @@ public final class RestClient {
      * in this class, it is the responsibility of the consumer to disconnect the connection
      * (by invoking {@link WatchResponse#disconnect()}) once the watch is no longer required.
      */
-    public WatchResponse watch(String resourceVersion) throws RestClientException {
+    public WatchResponse watch(String resourceVersion, ExecutorService readExecutor) {
+        HttpURLConnection connection;
         try {
-            String appendWatchParameter = (url.contains("?") ? "&" : "?") + String.format(WATCH_FORMAT, resourceVersion);
+            String appendWatchParameter = (url.contains("?") ? "&" : "?")
+                + String.format(WATCH_FORMAT, resourceVersion);
             String completeUrl = url + appendWatchParameter;
-            HttpRequest.Builder requestBuilder = HttpRequest.newBuilder()
-                    .uri(URI.create(completeUrl))
-                    .GET();
-
-            if (requestTimeoutSeconds > 0) {
-                requestBuilder.timeout(Duration.ofSeconds(requestTimeoutSeconds));
+            URL urlToConnect = new URL(completeUrl);
+            connection = (HttpURLConnection) urlToConnect.openConnection();
+            if (connection instanceof HttpsURLConnection && caCertificate != null) {
+                ((HttpsURLConnection) connection).setSSLSocketFactory(buildSslSocketFactory());
             }
-
+            connection.setReadTimeout((int) TimeUnit.SECONDS.toMillis(readTimeoutSeconds));
+            connection.setConnectTimeout((int) TimeUnit.SECONDS.toMillis(connectTimeoutSeconds));
+            connection.setRequestMethod("GET");
             for (Parameter header : headers) {
-                requestBuilder.header(header.getKey(), header.getValue());
+                connection.setRequestProperty(header.getKey(), header.getValue());
             }
 
             if (body != null) {
                 byte[] bodyData = body.getBytes(StandardCharsets.UTF_8);
-                requestBuilder.setHeader("Content-Length", String.valueOf(bodyData.length));
-                requestBuilder.setHeader("charset", "utf-8");
-                requestBuilder.method("GET", HttpRequest.BodyPublishers.ofByteArray(bodyData));
+
+                connection.setDoOutput(true);
+                connection.setRequestProperty("charset", "utf-8");
+                connection.setRequestProperty("Content-Length", Integer.toString(bodyData.length));
+
+                try (DataOutputStream outputStream = new DataOutputStream(connection.getOutputStream())) {
+                    outputStream.write(bodyData);
+                    outputStream.flush();
+                }
             }
 
-            HttpRequest request = requestBuilder.build();
-            HttpResponse<InputStream> response = httpClient.send(request, HttpResponse.BodyHandlers.ofInputStream());
-
-            checkResponseCode(request.method(), response);
-            return new WatchResponse(response);
+            checkResponseCode("GET", connection);
+            return new WatchResponse(connection, readExecutor);
         } catch (IOException e) {
             throw new RestClientException("Failure in executing REST call", e);
-        } catch (InterruptedException e) {
-            throw new RestClientException("REST call interrupted", e);
         }
     }
 
-    private void checkResponseCode(String method, HttpResponse<?> response) {
-        int responseCode = response.statusCode();
+    private void checkResponseCode(String method, HttpURLConnection connection)
+        throws IOException {
+        int responseCode = connection.getResponseCode();
         if (!isExpectedResponseCode(responseCode)) {
-            String errorMessage = "none, body type: " + response.body().getClass();
-            if (response.body() instanceof String) {
-                errorMessage = (String) response.body();
-            } else if (response.body() instanceof InputStream) {
-                Scanner scanner = new Scanner((InputStream) response.body(), StandardCharsets.UTF_8);
-                scanner.useDelimiter("\\Z");
-                if (scanner.hasNext()) {
-                    errorMessage = scanner.next();
-                }
+            String errorMessage;
+            try {
+                errorMessage = read(connection);
+            } catch (Exception e) {
+                throw new RestClientException(
+                    String.format("Failure executing: %s at: %s", method, url), responseCode);
             }
-            throw new RestClientException(
-                    String.format("Failure executing: %s at: %s. Message: %s", method, url, errorMessage),
-                    responseCode);
+            throw new RestClientException(String.format("Failure executing: %s at: %s. Message: %s", method, url, errorMessage),
+                responseCode);
         }
     }
 
@@ -267,15 +287,15 @@ public final class RestClient {
     }
 
     /**
-     * Builds SSL Context with the public CA Certificate from Kubernetes Master.
+     * Builds SSL Socket Factory with the public CA Certificate from Kubernetes Master.
      */
-    private SSLContext buildSslContext(String caCertificate) {
+    private SSLSocketFactory buildSslSocketFactory() {
         try {
             KeyStore keyStore = KeyStore.getInstance(KeyStore.getDefaultType());
             keyStore.load(null, null);
 
             int i = 0;
-            for (Certificate certificate : generateCertificates(caCertificate)) {
+            for (Certificate certificate : generateCertificates(this.caCertificate)) {
                 String alias = String.format("ca-%d", i++);
                 keyStore.setCertificateEntry(alias, certificate);
             }
@@ -285,7 +305,7 @@ public final class RestClient {
 
             SSLContext context = SSLContext.getInstance("TLS");
             context.init(null, tmf.getTrustManagers(), null);
-            return context;
+            return context.getSocketFactory();
 
         } catch (Exception e) {
             throw new RestClientException("Failure in generating SSLSocketFactory for certificate " + caCertificate, e);
@@ -304,6 +324,21 @@ public final class RestClient {
         } finally {
             IOUtil.closeResource(caInput);
         }
+    }
+
+    private static String read(HttpURLConnection connection) {
+        InputStream stream;
+        try {
+            stream = connection.getInputStream();
+        } catch (IOException e) {
+            stream = connection.getErrorStream();
+        }
+        if (stream == null) {
+            return null;
+        }
+        Scanner scanner = new Scanner(stream, "UTF-8");
+        scanner.useDelimiter("\\Z");
+        return scanner.next();
     }
 
     public static class Response {
@@ -327,13 +362,18 @@ public final class RestClient {
 
     public static class WatchResponse {
         private final int code;
-        private final HttpResponse<InputStream> response;
+        private final HttpURLConnection connection;
         private final BufferedReader reader;
 
-        public WatchResponse(HttpResponse<InputStream> response) throws IOException {
-            this.code = response.statusCode();
-            this.response = response;
-            this.reader = new BufferedReader(new InputStreamReader(response.body()));
+        private final ExecutorService readExecutor;
+        private Future<String> future;
+
+        public WatchResponse(HttpURLConnection connection, ExecutorService readExecutor) throws IOException {
+            this.code = connection.getResponseCode();
+            this.connection = connection;
+            this.reader = new BufferedReader(new InputStreamReader(connection.getInputStream(),
+                StandardCharsets.UTF_8));
+            this.readExecutor = readExecutor;
         }
 
         public int getCode() {
@@ -341,11 +381,22 @@ public final class RestClient {
         }
 
         public String nextLine() throws IOException {
-            return reader.readLine();
+            future = readExecutor.submit(reader::readLine);
+
+            try {
+                return future.get();
+            } catch (ExecutionException | CancellationException e) {
+                throw sneakyThrow(e);
+            } catch (InterruptedException e) {
+                // Pass on interruptions to thread
+                Thread.currentThread().interrupt();
+            }
+
+            return null;
         }
 
-        public void disconnect() throws IOException {
-            response.body().close();
+        public void disconnect() {
+            connection.disconnect();
         }
     }
 
